--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,8 @@
     "lint": "echo 'Add lint script here'"
   },
   "dependencies": {
-    "hono": "^4.7.7"
+    "hono": "^4.7.7",
+    "openai": "^4.95.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
