--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   ],
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/nanoid": "^3.0.0",
     "turbo": "^2.5.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "packageManager": "bun@1.2.10"
+  "packageManager": "bun@1.2.10",
+  "dependencies": {
+    "nanoid": "^5.1.5"
+  }
 }
