--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,12 +16,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dompurify": "^3.2.5",
+    "marked": "^15.0.8",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^5.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
