--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "start": "bun start dist/index.html",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
