--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "api",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "bun src/index.ts --watch",
-    "build": "bun build --compile --minify --sourcemap ./src/index.ts --outfile dist/api",
-    "start": "./dist/api",
-    "test": "echo 'Add test script here'",
-    "lint": "echo 'Add lint script here'"
-  },
-  "dependencies": {
-    "hono": "^4.7.7",
-    "openai": "^4.95.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2"
-  }
+	"name": "@jaap/api",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"scripts": {
+		"dev": "bun --watch src/index.ts",
+		"build": "bun build --compile --minify --sourcemap ./src/index.ts --outfile dist/api",
+		"start": "./dist/api"
+	},
+	"dependencies": {
+		"hono": "^4.7.7",
+		"jose": "^6.0.10",
+		"openai": "^4.95.0"
+	},
+	"devDependencies": {
+		"typescript": "^5.2.2"
+	}
 }
