--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,52 +1,63 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "start": "bun start dist/index.html",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "dompurify": "^3.2.5",
-    "marked": "^15.0.8",
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
-    "@tsconfig/node22": "^22.0.1",
-    "@types/dompurify": "^3.0.5",
-    "@types/marked": "^5.0.2",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitest/eslint-plugin": "^1.1.39",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-oxlint": "^0.16.0",
-    "eslint-plugin-vue": "~10.0.0",
-    "jiti": "^2.4.2",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.16.0",
-    "prettier": "3.5.3",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vitest": "^3.1.1",
-    "vue-tsc": "^2.2.8"
-  }
+	"name": "@jaap/frontend",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "run-p type-check \"build-only {@}\" --",
+		"start": "bun start dist/index.html",
+		"preview": "vite preview",
+		"test:unit": "vitest",
+		"build-only": "vite build",
+		"type-check": "vue-tsc --build",
+		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+		"lint:eslint": "eslint . --fix",
+		"lint": "run-s lint:*",
+		"format": "prettier --write src/"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.4",
+		"@vueuse/core": "^13.1.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dompurify": "^3.2.5",
+		"hono": "^4.7.7",
+		"lucide-vue-next": "^0.503.0",
+		"marked": "^15.0.8",
+		"pinia": "^3.0.1",
+		"reka-ui": "^2.2.0",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss": "^4.1.4",
+		"tw-animate-css": "^1.2.8",
+		"vue": "^3.5.13",
+		"vue-router": "^4.5.0"
+	},
+	"devDependencies": {
+		"@jaap/api": "workspace:*",
+		"@tsconfig/node22": "^22.0.1",
+		"@types/dompurify": "^3.0.5",
+		"@types/jsdom": "^21.1.7",
+		"@types/marked": "^5.0.2",
+		"@types/node": "^22.14.1",
+		"@vitejs/plugin-vue": "^5.2.3",
+		"@vitest/eslint-plugin": "^1.1.39",
+		"@vue/eslint-config-prettier": "^10.2.0",
+		"@vue/eslint-config-typescript": "^14.5.0",
+		"@vue/test-utils": "^2.4.6",
+		"@vue/tsconfig": "^0.7.0",
+		"eslint": "^9.22.0",
+		"eslint-plugin-oxlint": "^0.16.0",
+		"eslint-plugin-vue": "~10.0.0",
+		"jiti": "^2.4.2",
+		"jsdom": "^26.0.0",
+		"npm-run-all2": "^7.0.2",
+		"oxlint": "^0.16.0",
+		"prettier": "3.5.3",
+		"typescript": "~5.8.0",
+		"vite": "^6.2.4",
+		"vite-plugin-vue-devtools": "^7.7.2",
+		"vitest": "^3.1.1",
+		"vue-tsc": "^2.2.8"
+	}
 }
