--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "run-p type-check \"build-only {@}\" --",
+		"build": "bun run build-only",
 		"start": "bun start dist/index.html",
 		"preview": "vite preview",
 		"test:unit": "vitest",
