--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
 		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@nuxt/ui": "^3.1.0",
 		"@tailwindcss/vite": "^4.1.4",
 		"@vueuse/core": "^13.1.0",
 		"class-variance-authority": "^0.7.1",
@@ -39,7 +40,6 @@
 		"@types/dompurify": "^3.0.5",
 		"@types/jsdom": "^21.1.7",
 		"@types/marked": "^5.0.2",
-		"@types/node": "^22.14.1",
 		"@vitejs/plugin-vue": "^5.2.3",
 		"@vitest/eslint-plugin": "^1.1.39",
 		"@vue/eslint-config-prettier": "^10.2.0",
