--- a/biome.json
+++ b/biome.json
@@ -3,5 +3,16 @@
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git"
-	}
+	},
+	"overrides": [
+		{
+			"include": [
+				"packages/frontend/auto-imports.d.ts",
+				"packages/frontend/components.d.ts"
+			],
+			"formatter": {
+				"enabled": false
+			}
+		}
+	]
 }
