add CI workflow

--- a/biome.json
+++ b/biome.json
@@ -10,6 +10,9 @@
 				"packages/frontend/auto-imports.d.ts",
 				"packages/frontend/components.d.ts"
 			],
+			"linter": {
+				"enabled": false
+			},
 			"formatter": {
 				"enabled": false
 			}
