--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"type": "module",
 	"workspaces": ["packages/*"],
 	"scripts": {
+		"check": "biome check .",
 		"fix": "biome check --write .",
 		"dev": "turbo dev",
 		"build": "turbo build"
