--- a/packages/frontend/tsconfig.app.json
+++ b/packages/frontend/tsconfig.app.json
@@ -5,13 +5,13 @@
 		"src/**/*",
 		"src/**/*.vue",
 		"auto-imports.d.ts",
-		"components.d.ts"
+		"components.d.ts",
+		"nuxt-ui.d.ts"
 	],
 	"exclude": ["src/**/__tests__/*"],
 	"compilerOptions": {
-		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
 		"baseUrl": ".",
+		"verbatimModuleSyntax": false,
 		"paths": {
 			"@/*": ["./src/*"]
 		}
