--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"check": "biome check .",
 		"fix": "biome check --write .",
 		"dev": "turbo dev",
-		"build": "turbo build"
+		"build": "turbo build",
+		"typecheck": "turbo typecheck"
 	},
 	"dependencies": {
 		"nanoid": "^5.1.5"
