--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,11 +5,10 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "bun run build-only",
+		"build": "vite build",
 		"start": "bun start dist/index.html",
 		"preview": "vite preview",
 		"test:unit": "vitest",
-		"build-only": "vite build",
 		"typecheck": "vue-tsc --noEmit -p tsconfig.app.json",
 		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
 		"lint:eslint": "eslint . --fix",
@@ -45,6 +44,7 @@
 		"@vue/eslint-config-typescript": "^14.5.0",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.7.0",
+		"bun": "^1.2.11",
 		"eslint": "^9.22.0",
 		"eslint-plugin-oxlint": "^0.16.0",
 		"eslint-plugin-vue": "~10.0.0",
