--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/bun": "latest",
+		"bun": "^1.2.11",
 		"turbo": "^2.5.2"
 	},
 	"peerDependencies": {
