chore: remove unused and deprecated types packages

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,10 @@
 packages:
   - packages/*
-
 onlyBuiltDependencies:
   - '@biomejs/biome'
   - bun
   - esbuild
+  - onnxruntime-node
+  - protobufjs
+  - sharp
   - vue-demi
