--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"typecheck": "turbo typecheck"
 	},
 	"dependencies": {
+		"@llamaindex/chroma": "^0.0.17",
 		"nanoid": "^5.1.5"
 	},
 	"devDependencies": {
