--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,9 @@
 		"preview": "vite preview",
 		"test:unit": "vitest",
 		"typecheck": "vue-tsc --noEmit -p tsconfig.app.json",
+
+		"fix": "bun run format & bun run lint",
+		"format": "prettier . --write --log-level warn",
 		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
 		"lint:eslint": "eslint . --fix",
 		"lint": "run-s lint:*"
@@ -47,6 +50,7 @@
 		"eslint-plugin-vue": "~10.1.0",
 		"jiti": "^2.4.2",
 		"jsdom": "^26.0.0",
+		"llamaindex": "^0.10.3",
 		"npm-run-all2": "^7.0.2",
 		"oxlint": "^0.16.0",
 		"prettier": "3.5.3",
