--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,10 +14,15 @@
 	},
 	"dependencies": {
 		"@hono/valibot-validator": "^0.5.2",
+		"@llamaindex/anthropic": "^0.3.4",
+		"@llamaindex/huggingface": "^0.1.7",
+		"@llamaindex/readers": "^3.1.1",
 		"@valibot/to-json-schema": "^1.0.0",
+		"dotenv": "^16.5.0",
 		"hono": "^4.7.7",
 		"hono-openapi": "^0.4.6",
 		"jose": "^6.0.10",
+		"llamaindex": "^0.10.3",
 		"openai": "^4.95.0",
 		"valibot": "^1.0.0"
 	},
