--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,10 @@ packages:
 onlyBuiltDependencies:
   - '@biomejs/biome'
   - bun
+  - canvas
   - esbuild
   - onnxruntime-node
   - protobufjs
   - sharp
+  - tree-sitter
   - vue-demi
