--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"fix": "biome check --write .",
 		"dev": "turbo dev",
 		"build": "turbo build",
-		"typecheck": "turbo typecheck"
+		"typecheck": "turbo typecheck",
+		"seed:chroma": "bun packages/api/src/seed.ts"
 	},
 	"dependencies": {
 		"@llamaindex/chroma": "^0.0.17",
