--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev": "turbo dev",
 		"build": "turbo build",
 		"typecheck": "turbo typecheck",
-		"seed:chroma": "bun packages/api/src/seed.ts"
+		"seed:chroma": "cd packages/api && bun src/seed.ts"
 	},
 	"dependencies": {
 		"@llamaindex/chroma": "^0.0.17",
