--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
 		"@llamaindex/readers": "^3.1.1",
 		"@valibot/to-json-schema": "^1.0.0",
 		"better-sqlite3": "^11.9.1",
+		"cohere-ai": "^7.17.1",
 		"dotenv": "^16.5.0",
 		"gpt-tokenizer": "^2.9.0",
 		"hono": "^4.7.7",
