--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -50,7 +50,7 @@
 		"eslint-plugin-vue": "~10.1.0",
 		"jiti": "^2.4.2",
 		"jsdom": "^26.0.0",
-		"llamaindex": "^0.10.3",
+		"llamaindex": "0.10.3",
 		"npm-run-all2": "^8.0.0",
 		"oxlint": "^0.16.0",
 		"prettier": "3.5.3",
