--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
 			"outputs": [".next/**", "!.next/cache/**", "dist"]
 		},
 		"typecheck": {
-			"dependsOn": ["^typecheck"]
+			"dependsOn": ["build", "^typecheck"]
 		},
 		"dev": {
 			"persistent": true,
