--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,7 +7,8 @@
 		"strict": true,
 		"outDir": "dist",
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"declaration": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules"]
