--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
 		"@llamaindex/google": "0.3.1",
 		"@llamaindex/groq": "0.0.70",
 		"@llamaindex/mistral": "0.1.5",
+		"@llamaindex/openai": "^0.4.5",
 		"@llamaindex/readers": "3.1.3",
 		"@valibot/to-json-schema": "^1.0.0",
 		"better-sqlite3": "^11.9.1",
