--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
 		"nanoid": "^5.1.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.4",
+		"@biomejs/biome": "2.0.6",
 		"@types/bun": "latest",
 		"bun": "1.2.13",
-		"turbo": "2.5.3"
+		"turbo": "2.5.4"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
 	},
-	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+	"packageManager": "bun@1.2.17",
+	"trustedDependencies": [
+		"@tailwindcss/oxide",
+		"better-sqlite3",
+		"bun",
+		"canvas",
+		"esbuild",
+		"protobufjs",
+		"sharp",
+		"tree-sitter",
+		"vue-demi"
+	]
 }
