--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,23 +16,23 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@hono/valibot-validator": "^0.5.2",
+		"@hono/valibot-validator": "0.5.2",
 		"@llamaindex/anthropic": "0.3.6",
-		"@llamaindex/chroma": "0.0.19",
-		"@llamaindex/google": "0.3.1",
+		"@llamaindex/chroma": "0.0.27",
+		"@llamaindex/google": "0.3.12",
 		"@llamaindex/groq": "0.0.70",
 		"@llamaindex/mistral": "0.1.5",
-		"@llamaindex/openai": "^0.4.5",
+		"@llamaindex/openai": "0.4.7",
 		"@llamaindex/readers": "3.1.3",
-		"@valibot/to-json-schema": "^1.0.0",
-		"better-sqlite3": "^11.9.1",
-		"cohere-ai": "^7.17.1",
-		"dotenv": "^16.5.0",
-		"hono": "^4.7.7",
-		"hono-openapi": "^0.4.6",
-		"jose": "^6.0.10",
-		"llamaindex": "0.10.6",
-		"valibot": "^1.0.0"
+		"@valibot/to-json-schema": "1.0.0",
+		"better-sqlite3": "11.9.1",
+		"cohere-ai": "7.17.1",
+		"dotenv": "16.5.0",
+		"hono": "4.7.7",
+		"hono-openapi": "0.4.6",
+		"jose": "6.0.10",
+		"llamaindex": "0.11.12",
+		"valibot": "1.0.0"
 	},
 	"devDependencies": {
 		"@types/better-sqlite3": "7.6.13",
