--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,13 +14,13 @@
 	},
 	"dependencies": {
 		"@hono/valibot-validator": "0.5.2",
-		"@llamaindex/anthropic": "0.3.6",
-		"@llamaindex/chroma": "0.0.27",
-		"@llamaindex/google": "0.3.12",
-		"@llamaindex/groq": "0.0.70",
-		"@llamaindex/mistral": "0.1.5",
-		"@llamaindex/openai": "0.4.7",
-		"@llamaindex/readers": "3.1.3",
+		"@llamaindex/anthropic": "^0.3.6",
+		"@llamaindex/chroma": "^0.0.27",
+		"@llamaindex/google": "^0.3.12",
+		"@llamaindex/groq": "^0.0.70",
+		"@llamaindex/mistral": "^0.1.5",
+		"@llamaindex/openai": "^0.4.16",
+		"@llamaindex/readers": "^3.1.3",
 		"@valibot/to-json-schema": "1.0.0",
 		"better-sqlite3": "11.9.1",
 		"cohere-ai": "7.17.1",
