--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@biomejs/biome": "2.0.6",
 		"@types/bun": "latest",
 		"bun": "1.2.19",
-		"turbo": "2.5.4"
+		"turbo": "^2.5.6"
 	},
 	"peerDependencies": {
 		"typescript": "^5.8.3"
