--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,9 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["github>danielroe/renovate"]
+	"extends": ["github>danielroe/renovate"],
+	"packageRules": [
+		{
+			"minimumReleaseAge": "7 days"
+		}
+	]
 }
