only on npm source

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
 	"extends": ["github>danielroe/renovate"],
 	"packageRules": [
 		{
+			"matchDatasources": ["npm"],
 			"minimumReleaseAge": "7 days"
 		}
 	]
