--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
-
+# _config.yml kies hier je thema voor de lay-out van webpages
+theme: just-the-docs
+just_the_docs:
+  show_nav: false     # verberg de navigatiebalk volledig
+  search_enabled: true
