--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 # _config.yml kies hier je thema voor de lay-out van webpages
+title: ""  # verbergt de titel van de repository bovenaan de pagina
 theme: just-the-docs
 just_the_docs:
   show_nav: false     # verberg de navigatiebalk volledig
