--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,5 +3,13 @@ title: ""  # verbergt de titel van de repository bovenaan de pagina
 theme: just-the-docs
 just_the_docs:
   show_nav: false     # verberg de navigatiebalk volledig
-  search_enabled: true
-  logo: false
+  search_enabled: true # laat de zoekbalk bovenin zien
+
+# Favicon met logo 
+favicon_ico: assets/favicon.png
+
+nav-footer: "© 2025 i-Sociaal Lab    "
+
+# Bovenbalk: extra navigatie-links (rechtsboven)
+aux_links:
+  Ketenbureau: https://i-sociaaldomein.nl
