--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,15 @@
 # _config.yml kies hier je thema voor de lay-out van webpages
-theme: just-the-docs
+title: ""                 # leeg = geen titel in header
+url: "https://i-sociaal-lab.github.io"
+baseurl: "/jaapjunior"    # belangrijk voor assets/links
+
+remote_theme: just-the-docs/just-the-docs
+plugins:
+  - jekyll-remote-theme
+
 just_the_docs:
-  show_nav: false     # verberg de navigatiebalk volledig
-  search_enabled: true # laat de zoekbalk bovenin zien
+  search_enabled: true
+  show_nav: false
 
 # Bovenbalk: extra navigatie-links (rechtsboven)
 # aux_links:
