--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,12 @@
 # _config.yml kies hier je thema voor de lay-out van webpages
-title: ""                 # leeg = geen titel in header
+title: ""
+url: "https://i-sociaal-lab.github.io"
+baseurl: "/jaapjunior"
+
 remote_theme: just-the-docs/just-the-docs
+plugins:
+  - jekyll-remote-theme
 
-# Zoekbalk in de topbar:
-search_enabled: true
-
-# Navigatie is niet zichtbaar 
-show_nav: false
-
-# Bovenbalk: extra navigatie-links (rechtsboven)
-# aux_links:
- # Ketenbureau: https://i-sociaaldomein.nl
+just_the_docs:
+  search_enabled: true
+  show_nav: false
