--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,12 +1,8 @@
 # _config.yml kies hier je thema voor de lay-out van webpages
-title: ""
+remote_theme: just-the-docs/just-the-docs
+plugins: [jekyll-remote-theme]
+title: ""           # zodat er geen repo-naam bovenin komt
 url: "https://i-sociaal-lab.github.io"
 baseurl: "/jaapjunior"
-
-remote_theme: just-the-docs/just-the-docs
-plugins:
-  - jekyll-remote-theme
-
 just_the_docs:
   search_enabled: true
-  show_nav: false
