--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,6 @@
 title: ""
-url: "https://i-sociaal-lab.github.io"
-baseurl: "/jaapjunior"
 remote_theme: just-the-docs/just-the-docs
 plugins: [jekyll-remote-theme]
 just_the_docs:
   search_enabled: true
+  nav_exclude: true
