--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: ""  # geen titel in header
+title: ""  # geen titel in header laten staan
 url: "https://i-sociaal-lab.github.io"
 baseurl: "/jaapjunior"
 
