--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -15,8 +15,14 @@ RUN bun install --no-optional || bun install
 WORKDIR /app/packages/frontend
 ARG VITE_API_URL=http://localhost:3000
 ARG VITE_TEST_ENV=false
+ARG VITE_ENABLE_MODEL_CONTROLS=false
+ARG VITE_ENABLED_AGENTS=cs-wmo
+ARG VITE_ENABLE_FEEDBACK=true
 ENV VITE_API_URL=$VITE_API_URL
 ENV VITE_TEST_ENV=$VITE_TEST_ENV
+ENV VITE_ENABLE_MODEL_CONTROLS=$VITE_ENABLE_MODEL_CONTROLS
+ENV VITE_ENABLED_AGENTS=$VITE_ENABLED_AGENTS
+ENV VITE_ENABLE_FEEDBACK=$VITE_ENABLE_FEEDBACK
 RUN bun run build
 
 # Production stage - Nginx
