api naamgeving aangepast

--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -15,9 +15,9 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # API proxy
+    # API proxy (Railway internal hostname)
     location /api/ {
-        proxy_pass http://jaapjunior-api:3000/api/;
+        proxy_pass http://api.railway.internal:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
