--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -4,6 +4,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Use Railway's internal DNS resolver
+    resolver 127.0.0.11 valid=10s;
+    resolver_timeout 5s;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -16,6 +20,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
 
     # API proxy (Railway internal hostname)
+    # Railway services are accessible via <service-name>.railway.internal
     location /api/ {
         proxy_pass http://api.railway.internal:3000/api/;
         proxy_http_version 1.1;
@@ -28,6 +33,11 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
+        
+        # Better error handling
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
+        proxy_next_upstream_tries 2;
+        proxy_next_upstream_timeout 10s;
     }
 
     # Main location - SPA routing
