--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -20,9 +20,10 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
 
     # API proxy (Railway internal hostname)
-    # Railway services are accessible via <service-name>.railway.internal
+    # In Railway, services in the same project can reach each other
+    # Try the service name directly (Railway's internal networking)
     location /api/ {
-        proxy_pass http://api.railway.internal:3000/api/;
+        proxy_pass http://api:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
