--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -19,11 +19,10 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # API proxy (Railway internal hostname)
-    # In Railway, services in the same project can reach each other
-    # Try the service name directly (Railway's internal networking)
+    # API proxy (Railway public API URL)
+    # Proxy requests to the public Railway API URL
     location /api/ {
-        proxy_pass http://api:3000/api/;
+        proxy_pass https://api-production-1f41.up.railway.app/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
