Fix: configure nginx SSL settings for HTTPS upstream to Railway API

--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -24,12 +24,19 @@ server {
     location /api/ {
         proxy_pass https://api-production-1f41.up.railway.app/api/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        
+        # SSL settings for HTTPS upstream
+        proxy_ssl_server_name on;
+        proxy_ssl_verify off;
+        
+        # Headers - use API hostname, not frontend hostname
+        proxy_set_header Host api-production-1f41.up.railway.app;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
@@ -38,6 +45,12 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
         proxy_next_upstream_tries 2;
         proxy_next_upstream_timeout 10s;
+    }
+    
+    # Connection upgrade map for WebSocket support
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
     }
 
     # Main location - SPA routing
