--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
 		"@llamaindex/groq": "0.0.92",
 		"@llamaindex/mistral": "0.1.22",
 		"@llamaindex/openai": "0.4.20",
+		"@llamaindex/qdrant": "^0.1.32",
 		"@llamaindex/readers": "3.1.21",
 		"@valibot/to-json-schema": "1.3.0",
 		"better-sqlite3": "12.2.0",
